# Perfodia

./: .coverage  .gitignore  AUDIT_LOG.md  AUDIT_MANIFEST.json  AUDIT_REPORT.md  Advanced_Module_Usage.md  DOCKER.md  Docker Guide.md  Dockerfile  LICENSE  Perfodia_Advanced_Module_Users_Guide.md  README.md  docker-compose.yml  docker-entrypoint.sh  install_deps.sh  mypy.ini  patch1.patch  patch2.patch  patch3.patch  patch4.patch  patch5.patch  patch6.patch  perfodia.py  pyproject.toml  requirements.txt  test.sh  validate_all_fixes.sh
.github/workflows/: ci.yml
configs/: default.yaml  settings.py
docker/: docker-entrypoint.sh
modules/: active_directory.py  base.py  cracking.py  enumeration.py  exploitation.py  post_exploitation.py  recon.py  scanning.py  web_app.py
patches/: dockerguide.patch  perfodia.patch  readme.patch  requirements.patch  toolrunner.patch
scripts/: apply_tui_polish_patch.py  tui_polish.patch
tests/: conftest.py  test_core.py  test_credential_vault.py  test_sanitizer.py  test_scope_guard.py  test_tui.py  test_validators.py  test_vuln_scorer.py
tools/: generate_audit_manifest.py  verify_readme_testing_tools.py
utils/: config_wizard.py  credential_vault.py  logger.py  parallel.py  parsers.py  report_generator.py  sanitizer.py  scope_guard.py  screenshot.py  session_state.py  tool_runner.py  tui.py  validators.py  vuln_scorer.py
