[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perfodia"
version = "1.1.0"
description = "Perfodia - Modern network penetration testing framework with Rich TUI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Rikter Skale"}]
keywords = ["pentest", "penetration-testing", "security", "tui", "automation", "red-team"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security",
]

dependencies = [
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
tui = ["textual>=0.85.0"]
pdf = ["weasyprint>=61.0"]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[project.scripts]
perfodia = "perfodia:main"

[tool.setuptools]
py-modules = ["perfodia"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["configs*", "modules*", "utils*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"perfodia.py" = ["E402"]
"tests/test_core.py" = ["E402"]